...
                                               height: squareImageSize,
                                               alignment: .center)
                                        .foregroundColor(userPrefersDarkTheme ? .white : BrainwalletColor.nearBlack)
                                    Spacer()
                                }
                            }
                            .accessibilityIdentifier("backButtonToStartRestore")
                            Spacer()
                        }
                        .padding([.leading, .trailing], 20.0)
                        .padding(.top, 10.0)

                        Spacer()
...
